Fixed layout shift when using accordion tabs on desktop

--- a/view/frontend/web/css/source/_module.less
+++ b/view/frontend/web/css/source/_module.less
@@ -176,6 +176,12 @@
                     display: block !important;
                 }
             }
+
+            > .item.content {
+                &:not([aria-hidden]) {
+                    display: none;
+                }
+            }
         }
     }
 }
